--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   live:
-    image: ghcr.io/slowlydev/f1-dash-live:latest
+    image: ghcr.io/olikols07/f1-dash-live:latest
     build:
       context: .
       target: live
@@ -15,7 +15,7 @@ services:
         required: false
 
   api:
-    image: ghcr.io/slowlydev/f1-dash-api:latest
+    image: ghcr.io/olikols07/f1-dash-api:latest
     build:
       context: .
       target: api
@@ -30,9 +30,13 @@ services:
         required: false
 
   frontend:
-    image: ghcr.io/slowlydev/f1-dash:latest
+    image: ghcr.io/olikols07/f1-dash:latest
     build:
       context: ./dash/
+      args:
+        - ENABLE_TRACKING=1
+        - LIVE_SOCKET_URL=http://localhost:4000
+        - API_URL=http://localhost:4001
     restart: always
     ports:
       - 3000:3000
